--- a/src/components/PageTitle/PageTitle.css
+++ b/src/components/PageTitle/PageTitle.css
@@ -1,11 +1,11 @@
 /* The details of your blog. Defined in ghost/settings/ */
 .page-title {
     margin: 10px 0;
-    font-size: 5rem;
+    font-size: 7rem;
     letter-spacing: -1px;
     font-weight: 700;
     font-family: "Open Sans", sans-serif;
-    color: #fff;
+    color: #F7FFE0;
 }
 
 .no-cover .page-title {
