--- a/src/layouts/MainHeader/MainHeader.css
+++ b/src/layouts/MainHeader/MainHeader.css
@@ -9,10 +9,13 @@
     background: #222 no-repeat center center;
     background-size: cover;
     overflow: hidden;
+
 }
 
 .main-header .inner {
     width: 80%;
+    margin-top: 475px;
+
 }
 
 /* Put a semi-opaque radial gradient behind the icon to make it more visible
